src/test/rustdoc-ui/intra-doc-alias-ice.stderr
ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: TypeAlias::hoge: Inline
error: cannot resolve `TypeAlias::hoge` as a path to an item or module
  --> $DIR/intra-doc-alias-ice.rs:5:30
   |
LL | /// [broken cross-reference](TypeAlias::hoge)
   |                              ^^^^^^^^^^^^^^^ unresolved intra-doc link
   |
note: lint level defined here
  --> $DIR/intra-doc-alias-ice.rs:1:9
   |
LL | #![deny(intra_doc_link_resolution_failure)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`

error: aborting due to previous error

